--- a/app/src/main/res/drawable/dialog_bg.xml
+++ b/app/src/main/res/drawable/dialog_bg.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#233343"/>
+    <solid android:color="#1E2C3A"/>
     <!--<corners
         android:topLeftRadius="30dp"
         android:topRightRadius="30dp"/>-->
