--- a/app/src/main/res/layout/fragment_list_area.xml
+++ b/app/src/main/res/layout/fragment_list_area.xml
@@ -25,7 +25,7 @@
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipeRefreshLayoutArea"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvListArea"
