--- a/app/src/main/res/layout/fragment_list_work_progress.xml
+++ b/app/src/main/res/layout/fragment_list_work_progress.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".Fragments.fragmentHistory">
+    tools:context=".Fragments.fragmentListWorkProgress">
 
     <!-- TODO: Update blank fragment layout -->
-    <!--View page-->
-    <FrameLayout
-        android:id="@+id/flContainerHistory"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"/>
+        android:text="Lista de avances"
+        android:textSize="35dp"
+        android:textAlignment="center"
+        android:gravity="center"/>
 
-</RelativeLayout>
+</FrameLayout>
