--- a/app/src/main/res/layout/fragment_work_progress.xml
+++ b/app/src/main/res/layout/fragment_work_progress.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".Fragments.fragmentWorkProgress">
 
+    <!--Navegación-->
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,7 +20,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btOpenFragmentRegisterUser"
+                android:id="@+id/btOpenFragmentRegisterWorkProgress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="6dp"
@@ -37,10 +40,10 @@
                 android:textSize="16dp"
                 android:textColor="#233F58"
                 android:textAppearance="@style/Widget.MaterialComponents.TimePicker.Button"
-                android:text="Formulario"/>
+                android:text="Agregar avance"/>
 
             <Button
-                android:id="@+id/btOpenFragmentListUser"
+                android:id="@+id/btOpenFragmentListWorkProgress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="6dp"
@@ -60,11 +63,13 @@
                 android:textSize="16dp"
                 android:textColor="#233F58"
                 android:textAppearance="@style/Widget.MaterialComponents.TimePicker.Button"
-                android:text="Usuarios registrados"/>
+                android:text="Mostrar avances"/>
+
 
         </LinearLayout>
 
     </HorizontalScrollView>
+
 
     <!--liner-->
     <View
@@ -76,7 +81,7 @@
 
     <!--View page-->
     <FrameLayout
-        android:id="@+id/flContainerUser"
+        android:id="@+id/flContainerWorkProgress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
