--- a/app/src/main/res/layout/main_nav_drawer.xml
+++ b/app/src/main/res/layout/main_nav_drawer.xml
@@ -4,198 +4,238 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!-- Imagen del usuario -->
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- Icono -->
-            <ImageView
-                android:id="@+id/ivMainBack"
-                android:layout_width="wrap_content"
+            <!-- Imagen del usuario -->
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="16dp"
-                android:src="@drawable/ic_return"/>
+                android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/ivLogo"
-                android:layout_width="wrap_content"
-                android:layout_height="120dp"
-                android:layout_margin="16dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/inspeccion"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <!-- Icono -->
+                    <ImageView
+                        android:id="@+id/ivMainBack"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginLeft="16dp"
+                        android:src="@drawable/ic_return"/>
+
+                    <ImageView
+                        android:id="@+id/ivLogo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="120dp"
+                        android:layout_margin="16dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentRight="true"
+                        android:src="@drawable/inspeccion"/>
+
+                </LinearLayout>
+
+
+                <!-- Nombre del usuario -->
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Admin user 86"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:textColor="#636363"/>
+
+            </LinearLayout>
+
+            <!-- Vista -->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="#636363"/>
+
+            <!-- navegación - Home -->
+            <LinearLayout
+                android:id="@+id/lyHome"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+
+                <!-- Icono -->
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_home"/>
+
+
+                <!-- Titulo -->
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Home"
+                    android:padding="12dp"
+                    android:layout_marginStart="16dp"/>
+
+            </LinearLayout>
+
+            <!-- navegación - EUser -->
+            <LinearLayout
+                android:id="@+id/lyUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+
+                <!-- Icono -->
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_person"/>
+
+
+                <!-- Titulo -->
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Gestión de usuario"
+                    android:padding="12dp"
+                    android:layout_marginStart="16dp"/>
+
+            </LinearLayout>
+
+            <!-- navegación - Area -->
+            <LinearLayout
+                android:id="@+id/lyArea"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+
+                <!-- Icono -->
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_assigment"/>
+
+
+                <!-- Titulo -->
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Gestión de areas"
+                    android:padding="12dp"
+                    android:layout_marginStart="16dp"/>
+
+            </LinearLayout>
+
+            <!-- navegación - Work -->
+            <LinearLayout
+                android:id="@+id/lyWork"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+
+                <!-- Icono -->
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_work"/>
+
+
+                <!-- Titulo -->
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Avances"
+                    android:padding="12dp"
+                    android:layout_marginStart="16dp"/>
+
+            </LinearLayout>
+
+            <!-- navegación - History -->
+            <LinearLayout
+                android:id="@+id/lyHistory"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+
+                <!-- Icono -->
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_history"/>
+
+
+                <!-- Titulo -->
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Historial"
+                    android:padding="12dp"
+                    android:layout_marginStart="16dp"/>
+
+            </LinearLayout>
+
+            <!-- navegación - Logout -->
+            <LinearLayout
+                android:id="@+id/lyLogout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+
+                <!-- Icono -->
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_logout"/>
+
+
+                <!-- Titulo -->
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Salir de la aplicación"
+                    android:padding="12dp"
+                    android:layout_marginStart="16dp"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
-
-        <!-- Nombre del usuario -->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Admin user 86"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:textColor="#636363"/>
-
-    </LinearLayout>
-
-    <!-- Vista -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="#636363"/>
-
-    <!-- navegación - Home -->
-    <LinearLayout
-        android:id="@+id/lyHome"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-
-
-        <!-- Icono -->
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_home"/>
-
-
-        <!-- Titulo -->
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Home"
-            android:padding="12dp"
-            android:layout_marginStart="16dp"/>
-
-    </LinearLayout>
-
-    <!-- navegación - EUser -->
-    <LinearLayout
-        android:id="@+id/lyUser"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-
-
-        <!-- Icono -->
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_person"/>
-
-
-        <!-- Titulo -->
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Gestión de usuario"
-            android:padding="12dp"
-            android:layout_marginStart="16dp"/>
-
-    </LinearLayout>
-
-    <!-- navegación - Area -->
-    <LinearLayout
-        android:id="@+id/lyArea"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-
-
-        <!-- Icono -->
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_assigment"/>
-
-
-        <!-- Titulo -->
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Gestión de areas"
-            android:padding="12dp"
-            android:layout_marginStart="16dp"/>
-
-    </LinearLayout>
-
-    <!-- navegación - History -->
-    <LinearLayout
-        android:id="@+id/lyHistory"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-
-
-        <!-- Icono -->
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_history"/>
-
-
-        <!-- Titulo -->
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Historial"
-            android:padding="12dp"
-            android:layout_marginStart="16dp"/>
-
-    </LinearLayout>
-
-    <!-- navegación - Logout -->
-    <LinearLayout
-        android:id="@+id/lyLogout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-
-
-        <!-- Icono -->
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_logout"/>
-
-
-        <!-- Titulo -->
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Salir de la aplicación"
-            android:padding="12dp"
-            android:layout_marginStart="16dp"/>
-
-    </LinearLayout>
-
+    </ScrollView>
 
 </LinearLayout>
