--- a/app/src/main/res/layout/bottom_sheet_update_activity.xml
+++ b/app/src/main/res/layout/bottom_sheet_update_activity.xml
@@ -7,16 +7,16 @@
     android:gravity="center_horizontal"
     android:topLeftRadius="30dp"
     android:topRightRadius="30dp"
+    android:paddingTop="12dp"
     android:background="@drawable/dialog_bg"
     app:behavior_peekHeight="60dp"
     app:layout_behavior="@string/bottom_sheet_behavior"
-    android:orientation="vertical"
-    tools:context=".BottomSheet.dialogBottomRegisterActivity">
+    android:orientation="vertical">
 
     <View
         android:layout_width="50dp"
         android:layout_height="5dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="0dp"
         android:background="@drawable/circle_button"/>
 
     <LinearLayout
@@ -28,7 +28,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="REGISTRAR AVANCE"
+            android:text="ACTUALIZAR AVANCE"
             android:gravity="center"
             android:textSize="22dp"
             android:textStyle="bold"
@@ -41,27 +41,6 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="12dp"
             android:background="#D9D9D9"/>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:hintTextColor="#1C8484"
-            app:boxBackgroundColor="@color/white"
-            app:boxStrokeColor="@color/teal_700"
-            android:textColorHint="#73A6C3"
-            android:hint="Nombres y apellidos">
-
-            <EditText
-                android:id="@+id/etNameUserBSActivity"
-                android:clickable="false"
-                android:focusable="false"
-                android:inputType="none"
-                android:textIsSelectable="false"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
             android:layout_marginTop="6dp"
@@ -82,7 +61,7 @@
                 android:layout_height="wrap_content">
 
                 <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                    android:id="@+id/acSearchBSActivity"
+                    android:id="@+id/acSearchBSActivityUpdate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clickable="false"
@@ -105,7 +84,7 @@
                 android:hint="Cantidad">
 
                 <EditText
-                    android:id="@+id/etNumberBoxBSActivity"
+                    android:id="@+id/etNumberBoxBSActivityUpdate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"/>
@@ -114,41 +93,41 @@
 
         </LinearLayout>
 
+
         <LinearLayout
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="45dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btResetFormBSActivity"
+                android:id="@+id/btCloseBsActivityUpdate"
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:padding="12dp"
-                android:text="Resetear"
-                android:textColor="@color/white"
+                android:layout_marginRight="10dp"
+                android:text="Cancelar"
+                android:textColor="@color/black"
                 app:cornerRadius="8dp"
                 app:strokeColor="#000000"
                 app:strokeWidth="1dp"
-                android:backgroundTint="#000000" />
+                android:backgroundTint="#ADB1B8"/>
 
             <Button
-                android:id="@+id/btRegisterBsActivity"
+                android:id="@+id/btUpdateBsActivityUpdate"
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginLeft="8dp"
                 android:padding="12dp"
-                android:text="Registrar"
+                android:text="Actualizar"
                 android:textColor="@color/white"
                 app:cornerRadius="8dp"
-                app:strokeColor="#0E913B"
+                app:strokeColor="#1C8484"
                 app:strokeWidth="2dp"
-                android:backgroundTint="#0E913B" />
+                android:backgroundTint="#1C8484"/>
 
         </LinearLayout>
 
