--- a/app/src/main/res/layout/bottom_sheet_update_user.xml
+++ b/app/src/main/res/layout/bottom_sheet_update_user.xml
@@ -1,39 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
-    android:background="#282C31"
     android:orientation="vertical"
-    tools:context=".Dialogs.DialogEditUser">
+    android:gravity="center_horizontal"
+    android:topLeftRadius="30dp"
+    android:topRightRadius="30dp"
+    android:background="@drawable/dialog_bg"
+    app:behavior_peekHeight="60dp"
+    app:layout_behavior="@string/bottom_sheet_behavior"
+    android:padding="5dp">
 
-    <!--Barra superior-->
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/tbReturnDialogEdituser"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="#1F81B9"
-            android:padding="0dp"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            app:navigationIcon="@drawable/ic_return"
-            app:title="Editar cuenta de usuario"
-            app:titleTextColor="@color/white" />
-
-    </com.google.android.material.appbar.AppBarLayout>
+    <View
+        android:layout_width="50dp"
+        android:layout_height="5dp"
+        android:layout_marginTop="6dp"
+        android:background="@drawable/circle_button"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:layout_marginTop="45dp"
+        android:layout_marginBottom="45dp"
         android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ACTUALIZAR CUENTA "
+            android:gravity="center"
+            android:textSize="22dp"
+            android:textStyle="bold"
+            android:textColor="#C3C6CC"/>
+
+        <!--liner-->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="12dp"
+            android:background="#D9D9D9"/>
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
@@ -46,7 +55,7 @@
             android:hint="Nombres">
 
             <EditText
-                android:id="@+id/etNameuserDialogUser"
+                android:id="@+id/etNameuserBsUser"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -64,7 +73,7 @@
             android:hint="Apellidos">
 
             <EditText
-                android:id="@+id/etLastnameDialogUser"
+                android:id="@+id/etLastnameBsUser"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text" />
@@ -78,7 +87,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btCloseDialogUser"
+                android:id="@+id/btCloseBsUser"
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -93,7 +102,7 @@
                 android:backgroundTint="#ADB1B8"/>
 
             <Button
-                android:id="@+id/btUpdateDialogUser"
+                android:id="@+id/btUpdateBsUser"
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -106,10 +115,8 @@
                 app:strokeWidth="2dp"
                 android:backgroundTint="#1C8484"/>
 
-
         </LinearLayout>
 
 
     </LinearLayout>
-
 </LinearLayout>
