--- a/app/src/main/res/layout/fragment_register_area.xml
+++ b/app/src/main/res/layout/fragment_register_area.xml
@@ -32,21 +32,6 @@
             android:background="#D9D9D9"/>
 
 
-        <!--Seleccione el tipo de area-->
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
-            app:startIconDrawable="@drawable/ic_select_all"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                android:id="@+id/acTextSearchArea"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="none"
-                android:hint="Tipo de area"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
             android:layout_marginTop="8dp"
@@ -54,18 +39,20 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <!--Seleccione el tipo de area-->
             <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:layout_width="86dp"
-                android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+                app:startIconDrawable="@drawable/ic_select_all"
+                android:layout_width="wrap_content"
                 android:layout_weight="1"
-                android:hint="Area">
+                android:layout_height="wrap_content">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etNameareaAdd"
+                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                    android:id="@+id/acTextSearchArea"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text"/>
+                    android:inputType="none"
+                    android:hint="Tipo de area"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
