--- a/app/src/main/res/layout/fragment_work_progress.xml
+++ b/app/src/main/res/layout/fragment_work_progress.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="10dp"
     tools:context=".Fragments.fragmentWorkProgress">
 
-    <!--Navegación-->
-    <HorizontalScrollView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="none">
@@ -16,74 +16,44 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textDirection="firstStrong"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/btOpenFragmentRegisterWorkProgress"
+            <!--List user-->
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
-                android:layout_marginRight="6dp"
-                android:backgroundTint="#f2f2f2"
-                android:minWidth="0dp"
-                android:minHeight="0dp"
-                style="?attr/materialButtonOutlinedStyle"
-                app:cornerRadius="20dp"
-                android:shadowRadius="18"
-                app:strokeColor="#233F58"
-                android:paddingLeft="11dp"
-                android:paddingRight="11dp"
-                android:paddingTop="6dp"
-                android:paddingBottom="6dp"
-                android:textAlignment="center"
-                android:textSize="16dp"
-                android:textColor="#233F58"
-                android:textAppearance="@style/Widget.MaterialComponents.TimePicker.Button"
-                android:text="Agregar avance"/>
+                android:layout_height="180dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/btOpenFragmentListWorkProgress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
-                android:layout_marginRight="6dp"
-                android:backgroundTint="#f2f2f2"
-                android:minWidth="0dp"
-                android:minHeight="0dp"
-                style="?attr/materialButtonOutlinedStyle"
-                app:cornerRadius="20dp"
-                android:shadowRadius="18"
-                app:strokeColor="#233F58"
-                android:paddingLeft="11dp"
-                android:paddingRight="11dp"
-                android:paddingTop="6dp"
-                android:paddingBottom="6dp"
-                android:textAlignment="center"
-                android:textSize="16dp"
-                android:textColor="#233F58"
-                android:textAppearance="@style/Widget.MaterialComponents.TimePicker.Button"
-                android:text="Mostrar avances"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvListUserHorizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="none"
+                    android:scrollbarThumbHorizontal="@style/Widget.MaterialComponents.Tooltip"
+                    tools:listitem="@layout/card_user_progress"/>
 
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Seleccione un usuario"
+                android:gravity="center"
+                android:textSize="22dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
+
+            <!--liner-->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="12dp"
+                android:background="#D9D9D9"/>
 
         </LinearLayout>
 
-    </HorizontalScrollView>
+    </ScrollView>
 
-
-    <!--liner-->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="2dp"
-        android:background="#D9D9D9"/>
-
-    <!--View page-->
-    <FrameLayout
-        android:id="@+id/flContainerWorkProgress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"/>
-
-</LinearLayout>
+</RelativeLayout>
