--- a/app/src/main/res/layout/activity_dialog_list.xml
+++ b/app/src/main/res/layout/activity_dialog_list.xml
@@ -30,11 +30,76 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:orientation="horizontal">
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:id="@+id/tilDateRangeStart"
+            android:layout_marginRight="2dp"
+            app:startIconDrawable="@drawable/ic_date_range"
+            app:hintTextColor="#1C8484"
+            app:boxBackgroundColor="@color/white"
+            app:boxStrokeColor="@color/teal_700"
+            android:textColorHint="#73A6C3"
+            android:hint="Fecha inicio">
+
+            <EditText
+                android:id="@+id/etDateRangeStart"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="textStart"
+                android:inputType="date"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:layout_marginLeft="2dp"
+            android:id="@+id/tilDateRangeEnd"
+            app:startIconDrawable="@drawable/ic_date_range"
+            app:hintTextColor="#1C8484"
+            app:boxBackgroundColor="@color/white"
+            app:boxStrokeColor="@color/teal_700"
+            android:textColorHint="#73A6C3"
+            android:hint="Fecha final">
+
+            <EditText
+                android:id="@+id/etDateRangeEnd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="date"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <ImageButton
+            android:id="@+id/ibFilterActivity"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="3dp"
+            app:cardCornerRadius="8dp"
+            android:padding="11.5dp"
+            android:background="@color/white"
+            android:textAlignment="gravity"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_search"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:padding="4dp"
         android:orientation="vertical">
-
-        <!--Buscador-->
-
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipeRefreshLayoutActivity"
@@ -53,5 +118,67 @@
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginBottom="6dp"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:animateLayoutChanges="true"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="2dp"
+        android:backgroundTint="#1A67B3"
+        app:cardUseCompatPadding="true"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAlignment="textStart"
+                android:text="Total en soles"
+                android:textSize="22dp"
+                android:textColor="@color/white"
+                android:textStyle="bold"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="textEnd"
+                    android:text="S/"
+                    android:textSize="22dp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/tvTotalMoney"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:textAlignment="textEnd"
+                    android:text="780"
+                    android:textSize="22dp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
