--- a/app/src/main/res/layout/card_activity.xml
+++ b/app/src/main/res/layout/card_activity.xml
@@ -52,7 +52,7 @@
                     android:id="@+id/ivDeleteActivity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
+                    android:layout_marginLeft="16dp"
                     android:src="@drawable/ic_delete"/>
             </LinearLayout>
 
@@ -66,6 +66,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height ="wrap_content"
+                android:layout_marginBottom="5dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -98,6 +99,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height ="wrap_content"
+                android:layout_marginBottom="5dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -153,15 +155,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#145391"
-                    android:textStyle="normal|italic"
+                    android:textStyle="bold|italic"
                     android:text="50"
                     android:textSize="18sp"/>
 
             </LinearLayout>
 
         </LinearLayout>
-
-
 
     </LinearLayout>
 
