--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -4,14 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context=".Fragments.fragmentHistory">
 
     <!-- TODO: Update blank fragment layout -->
     <!--View page-->
-    <FrameLayout
-        android:id="@+id/flContainerHistory"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Historial"
+        android:textSize="56dp"
+        android:textStyle="bold"/>
 
 </RelativeLayout>
