--- a/app/src/main/res/layout/fragment_list_user.xml
+++ b/app/src/main/res/layout/fragment_list_user.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.fragmentListUser">
 
@@ -16,7 +17,7 @@
         <!--Buscador-->
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchUser"
-            app:queryHint="Buscar por nombre"
+            app:queryHint="Buscar"
             app:iconifiedByDefault="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
