--- a/app/src/main/res/layout/fragment_work_progress.xml
+++ b/app/src/main/res/layout/fragment_work_progress.xml
@@ -19,38 +19,24 @@
             android:orientation="vertical">
 
             <!--List user-->
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="180dp"
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="220dp"
                 android:layout_weight="1"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:scrollbars="none">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvListUserHorizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:scrollbars="none"
+                    android:orientation="horizontal"
+                    android:layoutDirection="inherit"
                     android:scrollbarThumbHorizontal="@style/Widget.MaterialComponents.Tooltip"
                     tools:listitem="@layout/card_user_progress"/>
 
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Seleccione un usuario"
-                android:gravity="center"
-                android:textSize="22dp"
-                android:textStyle="bold"
-                android:textColor="@color/black"/>
-
-            <!--liner-->
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginBottom="12dp"
-                android:background="#D9D9D9"/>
+            </HorizontalScrollView>
 
         </LinearLayout>
 
