--- a/app/src/main/res/layout/main_tabs_pager.xml
+++ b/app/src/main/res/layout/main_tabs_pager.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <!--Tab layout-->
@@ -10,6 +11,7 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayoutMain"
         app:tabIndicatorHeight="1dp"
+        android:background="@color/white"
         app:tabIconTint="#2B337B"
         app:tabIndicatorColor="#2B337B"
         android:layout_width="match_parent"
@@ -53,6 +55,7 @@
     <!--View page-->
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPagerMain"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
