--- a/app/src/main/res/layout/card_user_progress.xml
+++ b/app/src/main/res/layout/card_user_progress.xml
@@ -6,6 +6,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
+    android:background="@color/white"
     app:cardUseCompatPadding="true"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
@@ -13,6 +14,7 @@
     <LinearLayout
         android:layout_width="180dp"
         android:layout_height="180dp"
+        android:background="@color/white"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
